--- a/Werkstuk1_Yolan_Cristoria/Info.plist
+++ b/Werkstuk1_Yolan_Cristoria/Info.plist
@@ -34,6 +34,10 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Location acces OK?</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Location acces OK?</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
